data224.9002401.out
Collecting wandb
  Downloading wandb-0.13.1-py2.py3-none-any.whl (1.8 MB)
     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 1.8/1.8 MB 19.6 MB/s eta 0:00:00
Collecting promise<3,>=2.0
  Downloading promise-2.3.tar.gz (19 kB)
  Preparing metadata (setup.py): started
  Preparing metadata (setup.py): finished with status 'done'
Collecting GitPython>=1.0.0
  Downloading GitPython-3.1.27-py3-none-any.whl (181 kB)
     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 181.2/181.2 KB 532.4 kB/s eta 0:00:00
Requirement already satisfied: six>=1.13.0 in ./.venv/lib/python3.7/site-packages (from wandb) (1.16.0)
Collecting PyYAML
  Downloading PyYAML-6.0-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_12_x86_64.manylinux2010_x86_64.whl (596 kB)
     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 596.3/596.3 KB 2.1 MB/s eta 0:00:00
Requirement already satisfied: protobuf<4.0dev,>=3.12.0 in ./.venv/lib/python3.7/site-packages (from wandb) (3.19.4)
Requirement already satisfied: setuptools in ./.venv/lib/python3.7/site-packages (from wandb) (60.8.1)
Collecting psutil>=5.0.0
  Downloading psutil-5.9.1-cp37-cp37m-manylinux_2_12_x86_64.manylinux2010_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl (281 kB)
     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 281.4/281.4 KB 286.4 kB/s eta 0:00:00
Collecting setproctitle
  Downloading setproctitle-1.3.1-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl (30 kB)
Collecting sentry-sdk>=1.0.0
  Downloading sentry_sdk-1.9.3-py2.py3-none-any.whl (157 kB)
     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 157.2/157.2 KB 133.9 kB/s eta 0:00:00
Collecting docker-pycreds>=0.4.0
  Downloading docker_pycreds-0.4.0-py2.py3-none-any.whl (9.0 kB)
Requirement already satisfied: requests<3,>=2.0.0 in ./.venv/lib/python3.7/site-packages (from wandb) (2.25.1)
Collecting Click!=8.0.0,>=7.0
  Downloading click-8.1.3-py3-none-any.whl (96 kB)
     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 96.6/96.6 KB 1.1 MB/s eta 0:00:00
Collecting pathtools
  Downloading pathtools-0.1.2.tar.gz (11 kB)
  Preparing metadata (setup.py): started
  Preparing metadata (setup.py): finished with status 'done'
Collecting shortuuid>=0.5.0
  Downloading shortuuid-1.0.9-py3-none-any.whl (9.4 kB)
Requirement already satisfied: importlib-metadata in ./.venv/lib/python3.7/site-packages (from Click!=8.0.0,>=7.0->wandb) (4.10.1)
Requirement already satisfied: typing-extensions>=3.7.4.3 in ./.venv/lib/python3.7/site-packages (from GitPython>=1.0.0->wandb) (4.0.1)
Collecting gitdb<5,>=4.0.1
  Downloading gitdb-4.0.9-py3-none-any.whl (63 kB)
     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 63.1/63.1 KB 413.1 kB/s eta 0:00:00
Requirement already satisfied: urllib3<1.27,>=1.21.1 in ./.venv/lib/python3.7/site-packages (from requests<3,>=2.0.0->wandb) (1.26.8)
Requirement already satisfied: chardet<5,>=3.0.2 in ./.venv/lib/python3.7/site-packages (from requests<3,>=2.0.0->wandb) (4.0.0)
Requirement already satisfied: certifi>=2017.4.17 in ./.venv/lib/python3.7/site-packages (from requests<3,>=2.0.0->wandb) (2021.10.8)
Requirement already satisfied: idna<3,>=2.5 in ./.venv/lib/python3.7/site-packages (from requests<3,>=2.0.0->wandb) (2.10)
Collecting urllib3<1.27,>=1.21.1
  Downloading urllib3-1.26.11-py2.py3-none-any.whl (139 kB)
     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 139.9/139.9 KB 3.3 MB/s eta 0:00:00
Collecting smmap<6,>=3.0.1
  Downloading smmap-5.0.0-py3-none-any.whl (24 kB)
Requirement already satisfied: zipp>=0.5 in ./.venv/lib/python3.7/site-packages (from importlib-metadata->Click!=8.0.0,>=7.0->wandb) (3.7.0)
Building wheels for collected packages: promise, pathtools
  Building wheel for promise (setup.py): started
  Building wheel for promise (setup.py): finished with status 'done'
  Created wheel for promise: filename=promise-2.3-py3-none-any.whl size=21503 sha256=479e398f83e9e0b072bca06f9f9e9a25a0cee54b5a5589b7eec027b32e16b5f0
  Stored in directory: /home/nngu0068/.cache/pip/wheels/29/93/c6/762e359f8cb6a5b69c72235d798804cae523bbe41c2aa8333d
  Building wheel for pathtools (setup.py): started
  Building wheel for pathtools (setup.py): finished with status 'done'
  Created wheel for pathtools: filename=pathtools-0.1.2-py3-none-any.whl size=8806 sha256=be30e5f63c2af1f019f0e356e1cd4c172b4b98301d1902a708a4c4f52d1a7fb2
  Stored in directory: /home/nngu0068/.cache/pip/wheels/3e/31/09/fa59cef12cdcfecc627b3d24273699f390e71828921b2cbba2
Successfully built promise pathtools
Installing collected packages: pathtools, urllib3, smmap, shortuuid, setproctitle, PyYAML, psutil, promise, docker-pycreds, sentry-sdk, gitdb, Click, GitPython, wandb
  Attempting uninstall: urllib3
    Found existing installation: urllib3 1.26.8
    Uninstalling urllib3-1.26.8:
      Successfully uninstalled urllib3-1.26.8
ERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.
ont-bonito 0.5.0 requires mappy==2.23, but you have mappy 2.20 which is incompatible.
ont-bonito 0.5.0 requires numpy~=1.19.5, but you have numpy 1.17.5 which is incompatible.
ont-bonito 0.5.0 requires scipy==1.5.4, but you have scipy 1.4.1 which is incompatible.
ont-bonito 0.5.0 requires torch~=1.10.0, but you have torch 1.8.0+cu111 which is incompatible.
Successfully installed Click-8.1.3 GitPython-3.1.27 PyYAML-6.0 docker-pycreds-0.4.0 gitdb-4.0.9 pathtools-0.1.2 promise-2.3 psutil-5.9.1 sentry-sdk-1.9.3 setproctitle-1.3.1 shortuuid-1.0.9 smmap-5.0.0 urllib3-1.26.11 wandb-0.13.1
WARNING: You are using pip version 22.0.3; however, version 22.2.2 is available.
You should consider upgrading via the '/monfs00/projects/vs25/Tin/.venv/bin/python3 -m pip install --upgrade pip' command.
  File "full_spacer_detection.py", line 1455
    plt.title("pixel_plot")
    ^
IndentationError: unexpected indent
srun: error: gp07: task 0: Exited with exit code 1
